# holohover

./: .gitmodules  README.md  holohover_msgs  send_text.rtf
esp32/: .gitignore  (+1 more)
holohover_common/: CMakeLists.txt  package.xml
holohover_common/config/: holohover_params.yaml
holohover_common/holohover_common/: __init__.py
holohover_common/scripts/: signal_compensation.py
holohover_common/src/: python_bindings.cpp
holohover_control/: CMakeLists.txt  README.md  package.xml
holohover_control/src/: control_exp_node.cpp  control_exp_node.hpp  control_exp_settings.hpp  control_lqr_node.cpp  control_lqr_node.hpp  control_lqr_settings.hpp  control_signal_node.cpp
holohover_dmpc/: CMakeLists.txt  package.xml
holohover_dmpc/config/: QCQP_N10.yaml  QCQP_N20.yaml  QCQP_N20_obs.yaml  QCQP_N20_traj.yaml  QCQP_N20_traj_obs.yaml  QCQP_N7.yaml  QCQP_N7_obs.yaml  QCQP_N7_traj.yaml  QCQP_N7_traj_obs.yaml  QP_N10.yaml  QP_N20.yaml  QP_N20_traj.yaml  QP_N7.yaml  control_dmpc_config0.yaml  control_dmpc_config1.yaml  control_dmpc_config2.yaml  control_dmpc_config3.yaml  dmpc_trigger_config.yaml
holohover_dmpc/config/N10/: control_dmpc_config0.yaml  control_dmpc_config1.yaml  control_dmpc_config2.yaml  control_dmpc_config3.yaml
holohover_dmpc/config/N10pi/: control_dmpc_config0.yaml  control_dmpc_config1.yaml  control_dmpc_config2.yaml  control_dmpc_config3.yaml
holohover_dmpc/config/N10pi_traj/: control_dmpc_config0.yaml  control_dmpc_config1.yaml
holohover_dmpc/config/N20/: control_dmpc_config0.yaml  control_dmpc_config1.yaml  control_dmpc_config2.yaml  control_dmpc_config3.yaml
holohover_dmpc/config/N20pi_traj/: control_dmpc_config0.yaml  control_dmpc_config3.yaml
holohover_dmpc/config/N40/: control_dmpc_config0.yaml  control_dmpc_config1.yaml  (+2 more)
holohover_dmpc/matlab/: admm_lqr_postprocessing.m  admm_postprocessing.m  admm_postprocessing_andrea.m  dsqp_postprocessing.m  dsqp_postprocessing_andrea.m  write_circle_yaml.m
holohover_dmpc/ocp_specs/: compileAll.sh
holohover_dmpc/src/: control_dmpc_settings.hpp  control_lqr_settings.hpp  dense_casadi_function_buffer.cpp  dense_casadi_function_buffer.hpp  doptTimer.cpp  doptTimer.hpp  holohover_dmpc_admm_lqr_node.cpp  holohover_dmpc_admm_lqr_node.hpp  holohover_dmpc_admm_node.cpp  holohover_dmpc_admm_node.hpp  holohover_dmpc_dsqp_node.cpp  holohover_dmpc_dsqp_node.hpp  holohover_dmpc_trigger_node.cpp  rcl_timer_helper.c  rcl_timer_helper.h  sProb.cpp  sProb.hpp  sparse_casadi_function_buffer.cpp  sparse_casadi_function_buffer.hpp  trajectory_generator.cpp  trajectory_generator.hpp  vcpy.hpp  vector_casadi_function_buffer.cpp  vector_casadi_function_buffer.hpp
holohover_drivers/: CMakeLists.txt  README.md  package.xml
holohover_drivers/cmake/: Findlibgpiod.cmake
holohover_drivers/kernel_modules/: Makefile  spideve.c  spideve.h
holohover_drivers/src/: control_driver_node.cpp  control_driver_node.hpp  holohover_driver_node.cpp  holohover_driver_node.hpp  holohover_fc_node.cpp  holohover_fc_node.hpp  holohover_mouse_sensor_node.cpp  holohover_mouse_sensor_node.hpp  msp.cpp  msp.hpp  pmw3389dm.cpp  pmw3389dm.hpp  pmw3389dm_srom.hpp
holohover_gnc/: CMakeLists.txt  package.xml  setup.cfg  setup.py
holohover_gnc/config/: control_P_config.yaml  control_lqr_config.yaml  control_mpc_config.yaml  holohover_params.yaml  holohover_props.yaml  navigation_config.yaml  simulation_config.yaml
holohover_gnc/holohover_gnc/: camera.py  controller.py  estimator.py  refPt.csv  simulator.py
holohover_gnc/launch/: simulator.launch.py
holohover_gnc/scripts/: convert_mcap2csv.py  identify_thrust_profile.py
holohover_mpc/: CMakeLists.txt  package.xml
holohover_mpc/scripts/: thrust_data.csv
holohover_mpc/src/: control_mpc_settings.hpp  holohover_mpc_node.cpp
holohover_navigation/: CMakeLists.txt  package.xml
holohover_navigation/src/: disturbance_holohover_ekf.hpp  holohover_ekf.hpp  navigation_disturbance_node.cpp  navigation_disturbance_node.hpp  navigation_node.cpp  navigation_node.hpp  navigation_settings.hpp  rigid_body_2d_ekf.hpp
holohover_simulator/: CMakeLists.txt  README.md  package.xml
holohover_simulator/src/: simulator_node.cpp  simulator_node.hpp
holohover_utils/: CMakeLists.txt  package.xml  setup.cfg  setup.py
holohover_utils/config/: mocap_config.yaml  vrpn_config.yaml
holohover_utils/gui/: holohover.stl  holohover_.stl  holohover_config.rviz  holohover_old_.stl
holohover_utils/holohover_utils/: holohover_ping.py  ping_estimator.py  rviz_interface.py  tf_transformations.py
holohover_utils/launch/: MPC_holohover_optitrack.launch.py  MPCsimulation.launch.py  dmpc.simulation.launch.py  ekf.launch.py  exp.simulation.launch.py  exp_holohover_optitrack.launch.py  exp_simulation.launch.py  exp_simulation_delayed.launch.py  experiment_config_parser.py  holohover_optitrack.launch.py  hovercraft.launch.py  hovercraft_dmpc.launch.py  hovercraft_dmpc_lqr.launch.py  hovercraft_exp.launch.py  hovercraft_lqr.launch.py  hovercraft_mpc.launch.py  hw_env.launch.py  lqr.simulation.launch.py  micro_agent.launch.py  mpc.simulation.launch.py  mult.dmpc.lqr.simulation.launch.py  mult.dmpc.simulation.launch.py  mult.exp.hardware.launch.py  mult.exp.simulation.launch.py  mult.lqr.hardware.launch.py  mult.lqr.simulation.launch.py  mult_ekf.launch.py  optitrack_node.launch.py  real_drone.launch.py  robot.launch.py  signal.hardware.launch.py  signal_holohover_optitrack.launch.py  signal_simulation.launch.py  simulation.launch.py  simulation_base.launch.py  simulator.launch.py  trajectory_generator.launch.py  visualization.launch.py
holohover_utils/launch_old/: exp.hardware.launch.py  lqr.hardware.launch.py  micro_agent.launch.py  mpc.hardware.launch.py  signal.simulation.launch.py
holohover_utils/rqt_config/: controller_general.perspective
holohover_utils/scripts/: mcap_to_csv.py
holohover_utils/src/: optitrack_interface_node.cpp  optitrack_interface_node.hpp  rviz_interface_node.cpp  rviz_interface_node.hpp  rviz_wall_publisher.cpp  rviz_wall_publisher.hpp  simulation_settings.hpp  simulator_node.cpp  simulator_node.hpp
(+818 files in other folders)
